tests/sumo/devices/rerouting/personTrip/errors/unreachable_rides/errors.sumo
Warning: Person 'p0' aborted waiting for 1 at edge 'beg'.
